lib/NodeExploitSynthesis/tests/distinguishing_inputs/test1/analysis.out
tsc -b
node --trace-uncaught --stack-trace-limit=20 lib/jalangi2-babel/src/js/commands/jalangi.js --analysis src/rewrite.js ../NodeExploitSynthesis/tests/distinguishing_inputs/test1/driver.js log_level=warn policies=object:precise,string:precise,array:precise taint_paths=true taint_paths_json=true honeyobjects=true assert_passed=false eval_sink=
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
Browserslist: caniuse-lite is outdated. Please run:
npx browserslist@latest --update-db

Why you should do it regularly:
https://github.com/browserslist/browserslist#browsers-data-updating
/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:515
            throw tmp;
            ^

Error: Sink function eval reached with tainted argument [String: '1 + [objec

    at Object.Just (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/modules/Eval.js:117:27)
    at F.matchMaybe (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Flib.js:43:32)
    at TEvalPolicy (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/modules/Eval.js:109:18)
    at EvalApplyRewritePolicy (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/modules/Eval.js:90:9)
    at TEvalPre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Taint.js:333:46)
    at Instrumentation.instrumentCodePre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Base.js:274:64)
    at MyAnalysis.instrumentCodePre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/rewrite.js:115:39)
    at instrumentCode (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/instrument/esnstrument.js:1949:37)
    at Object.instrumentEvalCode (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/instrument/esnstrument.js:1913:16)
    at api (/Users/darion/projects/javascript_analysis/NodeExploitSynthesis/tests/distinguishing_inputs/test1/driver.js:16:47)
    at callFun (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:196:51)
    at invokeFun (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:217:22)
    at /Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:233:41
    at Object.<anonymous> (/Users/darion/projects/javascript_analysis/NodeExploitSynthesis/tests/distinguishing_inputs/test1/driver.js:34:62)
    at Module._compile (node:internal/modules/cjs/loader:1267:14)
    at Module._extensions..js (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:109:12)
    at Module.load (node:internal/modules/cjs/loader:1125:32)
    at Module._load (node:internal/modules/cjs/loader:965:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:83:12)
    at startProgram (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:121:19)
    at MyAnalysis.onReady (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/rewrite.js:131:13)
    at Object.<anonymous> (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:125:17)
    at Module._compile (node:internal/modules/cjs/loader:1267:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1321:10)
    at Module.load (node:internal/modules/cjs/loader:1125:32)
    at Module._load (node:internal/modules/cjs/loader:965:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:83:12)
    at node:internal/main/run_main_module:23:47
Thrown at:
    at Just (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/modules/Eval.js:117:27)
    at F.matchMaybe (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Flib.js:43:32)
    at TEvalPolicy (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/modules/Eval.js:109:18)
    at EvalApplyRewritePolicy (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/modules/Eval.js:90:9)
    at TEvalPre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Taint.js:333:46)
    at Instrumentation.instrumentCodePre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Base.js:274:64)
    at MyAnalysis.instrumentCodePre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/rewrite.js:115:39)
    at instrumentCode (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/instrument/esnstrument.js:1949:37)
    at instrumentEvalCode (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/instrument/esnstrument.js:1913:16)
    at api (/Users/darion/projects/javascript_analysis/NodeExploitSynthesis/tests/distinguishing_inputs/test1/driver.js:16:47)


Node.js v20.0.0
make: *** [analyze] Error 1
